--- a/build.xml
+++ b/build.xml
@@ -85,8 +85,12 @@
     <target name = "exp1" depends = "build">
         <java classname = "Experiment" classpath = "${cp}"
          failonerror = "true" >
+            <!-- File name. -->
+            <arg value="src/AllDrawingArchiveTable.csv"/>
             <!-- Designate experiment 1 -->
             <arg value="1"/>
+            <!-- Output prefix. -->
+            <arg value="results/output.csv"/>
         </java>
     </target>
 
